##
#  Copyright 2025 Colliery Software
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
##

[package]
name = "cloacina-testing"
description = "Test utilities for Cloacina workflows — no database required"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
edition = "2021"

# TODO: remove continuous feature flag — continuous scheduling is always on
[features]
default = []
continuous = ["chrono"]

[dependencies]
# Local dependencies
cloacina-workflow = { workspace = true }

# External dependencies
async-trait = { workspace = true }
serde_json = { workspace = true }
indexmap = "2.0"
petgraph = "0.6"
thiserror = "1.0"

# TODO: make chrono non-optional when continuous feature flag is removed
chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
