[package]
name = "cloacina-workflow-plugin"
description = "Fidius plugin interface and shared types for Cloacina workflow packages"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
edition = "2021"

[dependencies]
fidius = "0.2.1"
fidius-core = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
inventory = "0.3"
cloacina-computation-graph = { version = "0.6.0", path = "../cloacina-computation-graph" }
cloacina-workflow = { version = "0.6.0", path = "../cloacina-workflow", default-features = false }

[dev-dependencies]
toml = "0.8"
