[package]
name = "cloacina-workflow-plugin"
description = "Fidius plugin interface and shared types for Cloacina workflow packages"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
edition = "2021"

[dependencies]
toml = "0.8"
fidius = "0.5.5"
fidius-core = "0.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
inventory = "0.3"
cloacina-computation-graph = { version = "0.9.0", path = "../cloacina-computation-graph" }
cloacina-workflow = { version = "0.9.0", path = "../cloacina-workflow", default-features = false }

[dev-dependencies]
tempfile = "3"
toml = "0.8"
