[package]
name = "cloacina"
version.workspace = true
edition = "2021"
description = "A Rust library for resilient task execution and orchestration."
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "cloacina"
crate-type = ["lib", "cdylib"]

[features]
default = ["macros", "postgres", "sqlite", "kafka"]
postgres = ["diesel/postgres", "diesel/uuid", "deadpool-diesel/postgres", "tokio-postgres"]
sqlite = ["diesel/sqlite", "diesel/returning_clauses_for_sqlite_3_35", "deadpool-diesel/sqlite", "libsqlite3-sys/bundled"]
auth = ["postgres"]
macros = ["cloacina-macros"]
kafka = ["rdkafka"]
# CLOACI-I-0132 / T-0827 — constructor provider PACKAGING (assemble + sign + pack a
# built constructor crate into a distributable `.cloacina` provider archive). This
# is the build/distribute side and needs NO wasm runtime: it only pulls the
# serde-only constructor-contract crate (for the manifest schema) on top of the
# already-present fidius-core (pack/digest) + ed25519-dalek (signing). Crucially it
# does NOT enable `fidius-host/wasm`, so a default + packaging build stays
# wasmtime-free (`cargo tree -p cloacina -i wasmtime` is absent).
constructor-packaging = ["dep:cloacina-constructor-contract"]
# CLOACI-I-0132 / T-0823 — WASM task-constructor loader + executor bridge.
# OFF by default: enabling it turns on fidius-host's `wasm` feature (→ wasmtime +
# cranelift, ~55 crates) and pulls fidius-macro (for the host-side interface
# descriptor) + the constructor contract crate. The default cloacina build pulls
# NONE of this. Implies `constructor-packaging` (the loader also resolves the
# packaged provider form, T-0827).
constructors-wasm = [
    "dep:fidius-macro",
    "dep:cloacina-constructor-contract",
    "fidius-host/wasm",
    "constructor-packaging",
]

[dependencies]
# Workspace dependencies
async-trait.workspace = true
inventory.workspace = true
once_cell.workspace = true
serde_json.workspace = true

# Local dependencies
cloacina-api-types = { workspace = true }
cloacina-macros = { workspace = true, optional = true }
cloacina-workflow = { workspace = true }
cloacina-computation-graph = { version = "0.9.0", path = "../cloacina-computation-graph" }
cloacina-workflow-plugin = { version = "0.9.0", path = "../cloacina-workflow-plugin" }

# External dependencies
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10" }
croner = { version = "2.1.0" }
deadpool = { version = "0.12" }
deadpool-diesel = { version = "0.6" }
diesel = { version = "2.1.0", features = ["chrono", "serde_json"] }
diesel_migrations = { version = "2.1.0" }
libsqlite3-sys = { version = ">= 0.35", optional = true }
dotenvy = { version = "0.15" }
bzip2 = { version = "0.4" }
fidius-host = "0.5.5"
fidius-core = "0.5.5"
# Only compiled in when `constructors-wasm` is on (host-side interface descriptor +
# the shared constructor contract). Default builds pull neither.
fidius-macro = { version = "0.5.5", optional = true }
cloacina-constructor-contract = { workspace = true, optional = true }
libloading = { version = "0.8" }
parking_lot = { version = "0.12" }
rdkafka = { version = "0.39", features = ["tokio"], optional = true }
petgraph = { version = "0.6" }
rand = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
base64 = { version = "0.22" }
dirs = { version = "5.0" }
serial_test = { version = "3.2.0" }
tempfile = { version = "3.2" }
thiserror = { version = "1.0" }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7", optional = true }
futures = { version = "0.3" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = { version = "0.24" }
tracing-test = { version = "0.2" }
url = { version = "2.5" }
urlencoding = { version = "2.1" }
uuid = { version = "1.0", features = ["serde", "v4", "v5"] }
regex = { version = "1.10" }
semver = { version = "1.0" }
sha2 = { version = "0.10" }
aes-gcm = { version = "0.10" }
argon2 = { version = "0.5", features = ["std"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = { version = "0.4" }
pem = { version = "3.0" }
toml = { version = "0.8" }
anyhow = { version = "1.0" }
bincode = { workspace = true }
cel-interpreter = "0.10"

[dev-dependencies]
tracing-test = "0.2"
tempfile = "3.2"
# CLOACI-T-0827: signed-provider e2e test signs/verifies with the same Ed25519
# scheme fidius uses, and repacks a tampered dir to prove the loader fails closed.
ed25519-dalek = { version = "2.1" }
fidius-core = "0.5.5"
once_cell = "1.19.0"
serial_test = "3.2.0"
aquamarine = "0.6.0"
trybuild = "1.0"
