[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cloaca"
dynamic = ["version"]
description = "Python bindings for Cloacina workflow orchestration engine"
authors = [
    {name = "Cloacina Team", email = "team@cloacina.dev"}
]
license = {text = "MIT OR Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/colliery-io/cloacina"
Repository = "https://github.com/colliery-io/cloacina"
Documentation = "https://cloacina.dev"

[tool.maturin]
module-name = "cloaca"
features = ["postgres", "sqlite", "macros"]
strip = true
