[package]
name = "cloacinactl"
version.workspace = true
edition = "2021"
description = "Command-line interface for Cloacina task orchestration engine."
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[[bin]]
name = "cloacinactl"
path = "src/main.rs"

[features]
default = ["postgres", "sqlite", "kafka"]
postgres = ["cloacina/postgres"]
sqlite = ["cloacina/sqlite"]
kafka = ["cloacina/kafka"]

[dependencies]
cloacina = { path = "../cloacina", default-features = false }
cloacina-workflow-plugin = { version = "0.5.1", path = "../cloacina-workflow-plugin" }
clap.workspace = true
clap_complete = "4"
anyhow.workspace = true
fidius-core = "0.0.5"
tempfile = "3.2"
dirs = "6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
toml = "0.8"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
chrono = { version = "0.4" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde_yaml = "0.9"

[dev-dependencies]
serial_test = "3"
