[package]
name = "cloacinactl"
version.workspace = true
edition = "2021"
description = "Command-line interface for Cloacina task orchestration engine."
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[[bin]]
name = "cloacinactl"
path = "src/main.rs"

[features]
default = ["postgres", "sqlite"]
postgres = ["cloacina/postgres"]
sqlite = ["cloacina/sqlite"]

[dependencies]
# `constructor-packaging` gives `cloacinactl constructor package` the provider
# assembly/sign/pack path (CLOACI-T-0827). It is wasmtime-free (serde-only
# contract crate) — it does NOT pull `constructors-wasm`, so the CLI stays light.
cloacina = { workspace = true, default-features = false, features = ["constructor-packaging"] }
cloacina-client = { workspace = true }
cloacina-workflow-plugin = { workspace = true }
clap.workspace = true
clap_complete = "4"
anyhow.workspace = true
fidius-core = "0.5.6"
fidius-host = "0.5.6"
tempfile = "3.2"
dirs = "6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
toml = "0.8"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
chrono = { version = "0.4" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
# CLOACI-T-0629: WS client for `cloacinactl execution events --follow` (substrate consumer).
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-native-roots", "connect"] }
futures-util = "0.3"
base64 = "0.22"
serde_yaml = "0.9"

[dev-dependencies]
serial_test = "3"
