[workspace]

[package]
name = "complex-dag-example"
version = "0.2.0-alpha.5"
authors = ["Dylan Storey <dylan.storey@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/colliery-io/cloacina"
homepage = "https://github.com/colliery-io/cloacina"
documentation = "https://colliery-io.github.io/cloacina/"
readme = "README.md"
keywords = []
categories = []
edition = "2021"
description = "Complex DAG structure example for testing workflow visualization"

[lib]
crate-type = ["cdylib"]

[dependencies]
cloacina = { path = "../../cloacina" }
cloacina-macros = { path = "../../cloacina-macros" }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ctor = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
