[package]
name = "packaged-workflow-example"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["postgres"]
postgres = ["cloacina/postgres", "cloacina/macros"]
sqlite = ["cloacina/sqlite", "cloacina/macros"]

[dependencies]
cloacina = { path = "../../cloacina", default-features = false }
serde_json = "1.0"
async-trait = "0.1"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
ctor = "0.2"
tracing = "0.1"
